<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.webfilesys.de.webfilesysblog.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/scene_layout"
        android:drawingCacheQuality="low"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:paddingTop="6sp"
            android:text="@string/labelServerUrl" />

        <EditText
            android:id="@+id/server_url"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:padding="6sp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="top"
            android:background="@drawable/textarea_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:paddingTop="6sp"
            android:text="@string/labelUserid" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:padding="6sp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="top"
            android:background="@drawable/textarea_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:paddingTop="6sp"
            android:text="@string/labelPassword" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:padding="6sp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:gravity="top"
            android:background="@drawable/textarea_border" />

        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="10sp"/>

        <LinearLayout
            android:id="@+id/saveSettings_layout"
            android:drawingCacheQuality="low"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/save_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:textColor="#202020"
                android:textSize="16sp"
                android:background="@drawable/button_border"
                android:text="@string/buttonSaveSettings" />

            <TextView
                android:id="@+id/connecting_msg"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:paddingTop="6sp"
                android:text="@string/connecting"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/authProgressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:indeterminate="true"
                android:progress="1"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
