<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.webfilesys.de.webfilesysblog.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView android:id="@+id/ScrollView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scene_layout"
            android:drawingCacheQuality="low"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/pick_image_button"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:textColor="#202020"
                android:textSize="16sp"
                android:background="@drawable/button_border"
                android:layout_marginBottom="10px"
                android:text="@string/buttonPickImage" />

            <View
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="10px"/>

            <LinearLayout
                android:id="@+id/picture_layout"
                android:drawingCacheQuality="low"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="400px"
                    android:layout_height="400px" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:indeterminate="true"
                    android:progress="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/placeholder_layout"
                android:drawingCacheQuality="low"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/placeholder_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_marginTop="24px"
                    android:layout_marginLeft="20dp"
                    android:text="@string/noImageSelected" />

            </LinearLayout>

            <View
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="20px"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:padding="10sp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:hint="@string/hintDescription"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:background="@drawable/textarea_border" />

            <Button
                android:id="@+id/select_geo_location"
                android:layout_width="wrap_content"
                android:layout_height="32sp"
                android:layout_marginTop="20px"
                android:textColor="#202020"
                android:textSize="16sp"
                android:background="@drawable/button_border"
                android:text="@string/buttonSelectGeoLocation" />

            <LinearLayout
                android:id="@+id/selectedLocation"
                android:drawingCacheQuality="low"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/locationData"
                    android:drawingCacheQuality="low"
                    android:orientation="horizontal"
                    android:layout_marginTop="10px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:text="@string/selectedLocation" />

                    <TextView
                        android:id="@+id/selectedLocLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginLeft="8dp" />

                    <TextView
                        android:id="@+id/selectedLocLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginLeft="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/locationButtonCont"
                    android:drawingCacheQuality="low"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/change_geo_location"
                    android:layout_width="wrap_content"
                    android:layout_height="32sp"
                    android:textColor="#202020"
                    android:textSize="16sp"
                    android:background="@drawable/button_border"
                    android:text="@string/buttonChangeGeoLocation" />

                <Button
                    android:id="@+id/clear_geo_location"
                    android:layout_width="wrap_content"
                    android:layout_height="32sp"
                    android:textColor="#202020"
                    android:textSize="16sp"
                    android:background="@drawable/button_border"
                    android:text="@string/buttonClearGeoLocation"
                    android:layout_marginLeft="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sendButtonCont"
                android:drawingCacheQuality="low"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/send_post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="32sp"
                    android:textColor="#202020"
                    android:textSize="16sp"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="20px"
                    android:text="@string/buttonSendPost" />

                <Button
                    android:id="@+id/send_publish_button"
                    android:layout_width="wrap_content"
                    android:layout_height="32sp"
                    android:textColor="#202020"
                    android:textSize="16sp"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="20px"
                    android:layout_marginLeft="10dp"
                    android:text="@string/buttonSendPublish" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
